feat: support https && async log
